clusters/plex-r620/applications/duckietv/duckietv-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: duckietv
  labels:
    name: duckietv
