clusters/plex-r620/applications/duckietv/duckietv-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: duckietv
  namespace: duckietv
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: duckietv
  type: ClusterIP
